# uipa-code-lab

./: .gitignore  README.md
Dayoung_Study/: README.md  project_list.md
Dayoung_Study/farm-game/: project.godot
Dayoung_Study/farm-game/.godot/: global_script_class_cache.cfg
Dayoung_Study/farm-game/.godot/editor/: filesystem_cache10  project_metadata.cfg
Dayoung_Study/farm-game/docs/: 2026-07-17-farming-sim-design.md
Dayoung_Study/farm-game/scripts/: constants.gd  constants.gd.uid  farm_model.gd  farm_model.gd.uid  farm_view.gd  farm_view.gd.uid  game_state.gd  game_state.gd.uid  hud.gd  hud.gd.uid  main.gd  main.gd.uid  player.gd  player.gd.uid  shop_ui.gd  shop_ui.gd.uid
Dayoung_Study/farm-game/tests/: run_tests.gd  run_tests.gd.uid  test_farm_model.gd  test_farm_model.gd.uid  test_game_state.gd  test_game_state.gd.uid  test_lib.gd  test_lib.gd.uid
Dayoung_Study/xlsx_test/: README.md  budget_excel.py  sample_budget.xlsx  test_budget_excel.py
Dayoung_Study/xlsx_test/docs/superpowers/specs/: 2026-07-18-budget-excel-design.md
docs/dev_log/2026-07-17-notion-manager/: 00_cto_brief.md  00_cto_feedback.md  01_spec_planner.md  02_backend.md  03_security.md  04_deploy.md
docs/superpowers/plans/: 2026-07-19-notion-manager-m1.md
notion-manager/: .env.example  README.md  config.py  pyproject.toml
notion-manager/agent/: workspace_map.json
notion-manager/bot/: __init__.py  session_store.py
notion-manager/docs/: NOTION_AGENT_HANDOVER.md
notion-manager/tests/: conftest.py  test_config.py  test_session_store.py  test_smoke.py
