[project]
name = "notion-manager"
version = "0.1.0"
description = "스터디그룹 Notion 워크스페이스를 디스코드에서 자연어로 관리하는 봇"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.4",
    "openai>=1.60",
    "anthropic>=0.40",
    "notion-client>=2.3",
    "python-dotenv>=1.0",
    "aiosqlite>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
